--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tv_text"
+        android:id="@+id/textTxt"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="Hello World!"
