--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- font sizes -->
-    <dimen name="font_large_24">24sp</dimen>
+    <dimen name="font_large_20">20sp</dimen>
     <dimen name="font_normal_16">16sp</dimen>
     <dimen name="font_small_12">12sp</dimen>
 
@@ -13,4 +13,7 @@
     <dimen name="spacing_tiny_4">4dp</dimen>
 
     <dimen name="button_size_24">24dp</dimen>
+    <dimen name="btn_round_size_40">40dp</dimen>
+    <dimen name="avatar_round_size_112">112dp</dimen>
+    <dimen name="space_maximum_72">72dp</dimen>
 </resources>
