--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,6 +34,7 @@
 
             <ru.skillbranch.devintensive.ui.custom.CircleImageView
                 android:id="@+id/iv_avatar"
+                android:src="@drawable/avatar_default"
                 android:layout_width="@dimen/avatar_round_size_112"
                 android:layout_height="@dimen/avatar_round_size_112"
                 android:layout_centerHorizontal="true"/>
